feat: add manual duplex extension
